menambahkan endpoint untuk build script dengan params
